<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.activity_show_advertisement">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <ImageView
                android:id="@+id/imageView"
                android:layout_width="265dp"
                android:layout_height="200dp"
                android:layout_marginEnd="32dp"

                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/indeks" />


            <!-- wiek-->
            <TextView
                android:id="@+id/petWiek"
                android:layout_width="111dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:hint="@string/notatka_Wiek"
                android:ems="10"


                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/petImie"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:ignore="LabelFor" />

            <!-- imie-->
            <TextView
                android:id="@+id/petImie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"

                android:hint="@string/notatka_Imie"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />


            <!-- Gatunek -->
            <TextView
                android:id="@+id/textGatunek"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginEnd="136dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="136dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/notatka_Gatunek"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/petImie" />


            <TextView
                android:id="@+id/petGatunek"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginEnd="132dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="132dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textGatunek" />


            <!-- Dlugosc Siersci -->
            <TextView
                android:id="@+id/textDlugoscSiersci"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginEnd="132dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="132dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/notatka_DlugoscSiersci"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/petGatunek" />

            <TextView
                android:id="@+id/petDlugoscSiersci"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginEnd="132dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="132dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDlugoscSiersci" />



            <!-- Aktywnosc -->
            <TextView
                android:id="@+id/textAktywnosc"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginEnd="132dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="132dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/notatka_ZapotrzebowanieNaAktywnosc"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/petDlugoscSiersci" />

            <TextView
                android:id="@+id/petAktywnosc"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginEnd="132dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="132dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textAktywnosc" />


            <!-- Ruchliwosc -->
            <TextView
                android:id="@+id/textRuchliwosc"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginEnd="132dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="132dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/notatka_Ruchliwosc"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/petAktywnosc" />

            <TextView
                android:id="@+id/petRuchliwosc"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginEnd="132dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="132dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textRuchliwosc" />


            <!-- Nastawienie do czlowieka -->
            <TextView
                android:id="@+id/textNastawienieDoCzlowieka"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginEnd="132dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="132dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/notatka_NastawienieDoCzlowieka"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/petRuchliwosc" />

            <TextView
                android:id="@+id/petNastawienieDoCzlowieka"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginEnd="132dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="132dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textNastawienieDoCzlowieka" />




            <!-- Nastawienie do dzieci -->
            <TextView
                android:id="@+id/textNastawienieDoDzieci"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginEnd="132dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="132dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/notatka_NastawienieDoDzieci"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/petNastawienieDoCzlowieka" />

            <TextView
                android:id="@+id/petNastawienieDoDzieci"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginEnd="132dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="132dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textNastawienieDoDzieci" />



            <!-- Nastawienie do innych zwierzat -->
            <TextView
                android:id="@+id/textNastawienieDoInnychZwierzat"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginEnd="132dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="132dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/notatka_NastawienieDoInnychXwierzat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/petNastawienieDoDzieci" />

            <TextView
                android:id="@+id/petNastawienieDoInnychZwierzat"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginEnd="132dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="132dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textNastawienieDoInnychZwierzat" />



            <!-- Skłonności do niszczenia -->
            <TextView
                android:id="@+id/textSlonnoscDoNiszczenia"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginEnd="132dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="132dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/notatka_SklonnosciDoDiszczenia"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/petNastawienieDoInnychZwierzat" />

            <TextView
                android:id="@+id/petSlonnoscDoNiszczenia"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginEnd="132dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="132dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textSlonnoscDoNiszczenia" />



            <!-- Stopien Uczulania -->
            <TextView
                android:id="@+id/textStopienUczulania"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginEnd="132dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="132dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/notatka_StopienUczulania"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/petSlonnoscDoNiszczenia" />

            <TextView
                android:id="@+id/petStopienUczulania"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginEnd="132dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="132dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textStopienUczulania" />



            <!-- Miesięczny koszt utrzymania -->
            <TextView
                android:id="@+id/textKoszt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:text="@string/notatka_MiesiecznyKosztUtrzymania"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/petStopienUczulania" />

            <TextView
                android:id="@+id/petKoszt"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginEnd="132dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="132dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textKoszt" />


            <!-- Przebyte lub aktualne choroby -->
            <TextView
                android:id="@+id/textChoroby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:text="@string/notatka_PrzebyteLubAktualneChoroby"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/petKoszt" />

            <TextView
                android:id="@+id/petChoroby"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginEnd="132dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="132dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textChoroby" />


            <!-- Opis -->
            <TextView
                android:id="@+id/textOpis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:text="@string/notatka_Opis"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/petChoroby" />

            <TextView
                android:id="@+id/petOpis"
                android:layout_width="220dp"
                android:layout_height="25dp"
                android:layout_marginEnd="132dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="132dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textOpis" />


            <Button
                android:id="@+id/buttonGotowe"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:layout_marginTop="16dp"
                android:text="Gotowe "
                android:textStyle="bold"
                android:onClick="clickGotowe"


                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@+id/petOpis"
                />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>